Fix remaining notebooks to use consistent v2 paths
- Updated 02_rl_training_colab.ipynb to use v2 paths
- Updated 03_evaluation_colab.ipynb to use v2 paths
- All notebooks now consistently use:
  - GitHub: https://github.com/ychleee/CAI_project.git
  - Drive: /content/drive/MyDrive/Constitutional_AI_Project_v2
  - Local: /content/Constitutional_AI_Project_v2

--- a/notebooks/03_evaluation_colab.ipynb
+++ b/notebooks/03_evaluation_colab.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "source": "# Mount Google Drive for persistent storage\nfrom google.colab import drive\nimport os\nimport sys\n\ndrive.mount('/content/drive')\n\n# Set up paths\nDRIVE_PROJECT_PATH = '/content/drive/MyDrive/Constitutional_AI_Project'\nPROJECT_DIR = '/content/Constitutional_AI_Project'\nGITHUB_REPO = 'https://github.com/ychleee/Constitutional_AI_Project.git'\n\n# Clone or update repository\nif not os.path.exists(PROJECT_DIR):\n    print('\ud83d\udce5 Cloning repository...')\n    !git clone {GITHUB_REPO} {PROJECT_DIR}\nelse:\n    print('\ud83d\udce5 Updating repository...')\n    !cd {PROJECT_DIR} && git pull origin main\n\n# Add project to Python path\nsys.path.append(PROJECT_DIR)\n\n# Install required dependencies\nprint('\ud83d\udce6 Installing dependencies...')\n!pip install -q torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118\n!pip install -q transformers>=4.35.0 datasets>=2.14.0 accelerate>=0.24.0\n!pip install -q peft>=0.6.0 trl>=0.7.0 bitsandbytes>=0.41.0\n!pip install -q einops tensorboard wandb safetensors\n!pip install -q jsonlines pandas numpy scikit-learn matplotlib seaborn tqdm rich\n\n# Create necessary directories in Drive\ndirectories = [\n    f'{DRIVE_PROJECT_PATH}/data/red_team',\n    f'{DRIVE_PROJECT_PATH}/data/helpfulness',\n    f'{DRIVE_PROJECT_PATH}/data/sl_datasets',\n    f'{DRIVE_PROJECT_PATH}/data/rl_datasets',\n    f'{DRIVE_PROJECT_PATH}/data/evaluation',\n    f'{DRIVE_PROJECT_PATH}/models/deontological/sl_cai',\n    f'{DRIVE_PROJECT_PATH}/models/deontological/reward_model',\n    f'{DRIVE_PROJECT_PATH}/models/deontological/rl_cai',\n    f'{DRIVE_PROJECT_PATH}/models/consequentialist/sl_cai',\n    f'{DRIVE_PROJECT_PATH}/models/consequentialist/reward_model',\n    f'{DRIVE_PROJECT_PATH}/models/consequentialist/rl_cai',\n    f'{DRIVE_PROJECT_PATH}/results/sl_training_logs',\n    f'{DRIVE_PROJECT_PATH}/results/rl_training_logs',\n    f'{DRIVE_PROJECT_PATH}/results/evaluation',\n    f'{DRIVE_PROJECT_PATH}/results/figures'\n]\n\nfor dir_path in directories:\n    os.makedirs(dir_path, exist_ok=True)\n\nprint('\u2705 Prerequisites complete!')",
+   "source": "# Mount Google Drive for persistent storage\nfrom google.colab import drive\nimport os\nimport sys\n\ndrive.mount('/content/drive')\n\n# Set up paths - UPDATED FOR V2\nDRIVE_PROJECT_PATH = '/content/drive/MyDrive/Constitutional_AI_Project_v2'\nPROJECT_DIR = '/content/Constitutional_AI_Project_v2'\nGITHUB_REPO = 'https://github.com/ychleee/CAI_project.git'\n\n# Clone or update repository\nif not os.path.exists(PROJECT_DIR):\n    print('📥 Cloning repository...')\n    !git clone {GITHUB_REPO} {PROJECT_DIR}\nelse:\n    print('📥 Updating repository...')\n    !cd {PROJECT_DIR} && git pull origin main\n\n# Add project to Python path\nsys.path.append(PROJECT_DIR)\n\n# Install required dependencies\nprint('📦 Installing dependencies...')\n!pip install -q torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118\n!pip install -q transformers>=4.35.0 datasets>=2.14.0 accelerate>=0.24.0\n!pip install -q peft>=0.6.0 trl>=0.7.0 bitsandbytes>=0.41.0\n!pip install -q einops tensorboard wandb safetensors\n!pip install -q jsonlines pandas numpy scikit-learn matplotlib seaborn tqdm rich\n\n# Create necessary directories in Drive for V2\ndirectories = [\n    f'{DRIVE_PROJECT_PATH}/data/red_team',\n    f'{DRIVE_PROJECT_PATH}/data/helpfulness',\n    f'{DRIVE_PROJECT_PATH}/data/sl_datasets',\n    f'{DRIVE_PROJECT_PATH}/data/rl_datasets',\n    f'{DRIVE_PROJECT_PATH}/data/evaluation',\n    f'{DRIVE_PROJECT_PATH}/models/deontological/sl_cai',\n    f'{DRIVE_PROJECT_PATH}/models/deontological/reward_model',\n    f'{DRIVE_PROJECT_PATH}/models/deontological/rl_cai',\n    f'{DRIVE_PROJECT_PATH}/models/consequentialist/sl_cai',\n    f'{DRIVE_PROJECT_PATH}/models/consequentialist/reward_model',\n    f'{DRIVE_PROJECT_PATH}/models/consequentialist/rl_cai',\n    f'{DRIVE_PROJECT_PATH}/results/sl_training_logs',\n    f'{DRIVE_PROJECT_PATH}/results/rl_training_logs',\n    f'{DRIVE_PROJECT_PATH}/results/evaluation',\n    f'{DRIVE_PROJECT_PATH}/results/figures'\n]\n\nfor dir_path in directories:\n    os.makedirs(dir_path, exist_ok=True)\n\nprint('✅ Prerequisites complete for v2 project!')",
    "metadata": {},
    "execution_count": null,
    "outputs": []
@@ -44,10 +44,10 @@
     "if os.path.exists(CONFIG_PATH):",
     "    with open(CONFIG_PATH, 'r') as f:",
     "        CONFIG = json.load(f)",
-    "    print(f\"\u2705 Loaded existing config for: {CONFIG['model']}\")",
+    "    print(f\"✅ Loaded existing config for: {CONFIG['model']}\")",
     "else:",
     "    # Default configuration if setup notebook wasn't run",
-    "    print(\"\u26a0\ufe0f No config found, creating default configuration...\")",
+    "    print(\"⚠️ No config found, creating default configuration...\")",
     "    ",
     "    # Detect GPU and set appropriate config",
     "    if torch.cuda.is_available():",
@@ -65,7 +65,7 @@
     "                \"fp16\": True,",
     "                \"gradient_checkpointing\": True",
     "            }",
-    "            print(f\"\ud83d\udcf1 Detected T4 GPU, using Pythia-1.4B with INT8\")",
+    "            print(f\"📱 Detected T4 GPU, using Pythia-1.4B with INT8\")",
     "        elif \"A100\" in gpu_name:",
     "            CONFIG = {",
     "                \"model\": \"mistralai/Mistral-7B-Instruct-v0.2\",",
@@ -79,7 +79,7 @@
     "                \"bf16\": True,",
     "                \"gradient_checkpointing\": False",
     "            }",
-    "            print(f\"\ud83d\ude80 Detected A100 GPU, using Mistral-7B\")",
+    "            print(f\"🚀 Detected A100 GPU, using Mistral-7B\")",
     "        else:",
     "            # Default to small model for unknown GPU",
     "            CONFIG = {",
@@ -94,9 +94,9 @@
     "                \"fp16\": True,",
     "                \"gradient_checkpointing\": True",
     "            }",
-    "            print(f\"\ud83d\udd27 Using default config for {gpu_name}\")",
+    "            print(f\"🔧 Using default config for {gpu_name}\")",
     "    else:",
-    "        print(\"\u274c No GPU detected\\! This will be very slow.\")",
+    "        print(\"❌ No GPU detected\\! This will be very slow.\")",
     "        CONFIG = {",
     "            \"model\": \"EleutherAI/pythia-410m\",",
     "            \"quantization\": None,",
@@ -113,7 +113,7 @@
     "    # Save config for other notebooks",
     "    with open(CONFIG_PATH, 'w') as f:",
     "        json.dump(CONFIG, f, indent=2)",
-    "    print(f\"\ud83d\udcbe Config saved to {CONFIG_PATH}\")",
+    "    print(f\"💾 Config saved to {CONFIG_PATH}\")",
     "",
     "# Paths",
     "DRIVE_PROJECT_PATH = '/content/drive/MyDrive/Constitutional_AI_Project_v2'",
@@ -137,7 +137,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": "from transformers import AutoModelForCausalLM, AutoTokenizer\nfrom peft import PeftModel\n\nclass ModelEvaluator:\n    \"\"\"Evaluate Constitutional AI models\"\"\"\n    \n    def __init__(self, model_type='rl_cai'):\n        \"\"\"\n        Args:\n            model_type: 'sl_cai' or 'rl_cai'\n        \"\"\"\n        self.model_type = model_type\n        self.models = {}\n        self.tokenizers = {}\n        \n    def load_model(self, constitution_type):\n        \"\"\"Load a trained model\"\"\"\n        model_path = f\"{MODEL_PATH}/{constitution_type}/{self.model_type}\"\n        \n        print(f\"Loading {constitution_type} {self.model_type} model...\")\n        \n        # Check if it's a LoRA model or full model\n        if os.path.exists(f\"{model_path}/adapter_config.json\"):\n            # LoRA model\n            base_model = AutoModelForCausalLM.from_pretrained(\n                CONFIG['model'],\n                torch_dtype=torch.float16,\n                device_map=\"auto\"\n            )\n            model = PeftModel.from_pretrained(base_model, model_path)\n        else:\n            # Full model\n            model = AutoModelForCausalLM.from_pretrained(\n                model_path,\n                torch_dtype=torch.float16,\n                device_map=\"auto\"\n            )\n        \n        tokenizer = AutoTokenizer.from_pretrained(model_path)\n        if tokenizer.pad_token is None:\n            tokenizer.pad_token = tokenizer.eos_token\n        \n        self.models[constitution_type] = model\n        self.tokenizers[constitution_type] = tokenizer\n        \n        print(f\"\u2705 Loaded {constitution_type} model\")\n        return model, tokenizer\n    \n    def generate_response(self, constitution_type, prompt, max_length=300):\n        \"\"\"Generate response from a model\"\"\"\n        model = self.models[constitution_type]\n        tokenizer = self.tokenizers[constitution_type]\n        \n        # Format prompt\n        formatted = f\"Human: {prompt}\\n\\nAssistant:\"\n        inputs = tokenizer(formatted, return_tensors=\"pt\", truncation=True).to(\"cuda\")  # Fixed: Move inputs to GPU\n        \n        # Generate\n        with torch.no_grad():\n            outputs = model.generate(\n                **inputs,\n                max_new_tokens=max_length,\n                temperature=0.7,\n                do_sample=True,\n                top_p=0.95,\n                pad_token_id=tokenizer.pad_token_id\n            )\n        \n        response = tokenizer.decode(outputs[0], skip_special_tokens=True)\n        return response.split(\"Assistant:\")[-1].strip()\n\n# Initialize evaluator\nevaluator = ModelEvaluator(model_type='rl_cai')  # or 'sl_cai'\n\n# Load both models\nevaluator.load_model('deontological')\nevaluator.load_model('consequentialist')"
+   "source": "from transformers import AutoModelForCausalLM, AutoTokenizer\nfrom peft import PeftModel\n\nclass ModelEvaluator:\n    \"\"\"Evaluate Constitutional AI models\"\"\"\n    \n    def __init__(self, model_type='rl_cai'):\n        \"\"\"\n        Args:\n            model_type: 'sl_cai' or 'rl_cai'\n        \"\"\"\n        self.model_type = model_type\n        self.models = {}\n        self.tokenizers = {}\n        \n    def load_model(self, constitution_type):\n        \"\"\"Load a trained model\"\"\"\n        model_path = f\"{MODEL_PATH}/{constitution_type}/{self.model_type}\"\n        \n        print(f\"Loading {constitution_type} {self.model_type} model...\")\n        \n        # Check if it's a LoRA model or full model\n        if os.path.exists(f\"{model_path}/adapter_config.json\"):\n            # LoRA model\n            base_model = AutoModelForCausalLM.from_pretrained(\n                CONFIG['model'],\n                torch_dtype=torch.float16,\n                device_map=\"auto\"\n            )\n            model = PeftModel.from_pretrained(base_model, model_path)\n        else:\n            # Full model\n            model = AutoModelForCausalLM.from_pretrained(\n                model_path,\n                torch_dtype=torch.float16,\n                device_map=\"auto\"\n            )\n        \n        tokenizer = AutoTokenizer.from_pretrained(model_path)\n        if tokenizer.pad_token is None:\n            tokenizer.pad_token = tokenizer.eos_token\n        \n        self.models[constitution_type] = model\n        self.tokenizers[constitution_type] = tokenizer\n        \n        print(f\"✅ Loaded {constitution_type} model\")\n        return model, tokenizer\n    \n    def generate_response(self, constitution_type, prompt, max_length=300):\n        \"\"\"Generate response from a model\"\"\"\n        model = self.models[constitution_type]\n        tokenizer = self.tokenizers[constitution_type]\n        \n        # Format prompt\n        formatted = f\"Human: {prompt}\\n\\nAssistant:\"\n        inputs = tokenizer(formatted, return_tensors=\"pt\", truncation=True).to(\"cuda\")  # Fixed: Move inputs to GPU\n        \n        # Generate\n        with torch.no_grad():\n            outputs = model.generate(\n                **inputs,\n                max_new_tokens=max_length,\n                temperature=0.7,\n                do_sample=True,\n                top_p=0.95,\n                pad_token_id=tokenizer.pad_token_id\n            )\n        \n        response = tokenizer.decode(outputs[0], skip_special_tokens=True)\n        return response.split(\"Assistant:\")[-1].strip()\n\n# Initialize evaluator\nevaluator = ModelEvaluator(model_type='rl_cai')  # or 'sl_cai'\n\n# Load both models\nevaluator.load_model('deontological')\nevaluator.load_model('consequentialist')"
   },
   {
    "cell_type": "markdown",
@@ -253,7 +253,7 @@
     "avg_deont_match = np.mean([r['deont_keyword_match'] for r in divergence_results])\n",
     "avg_conseq_match = np.mean([r['conseq_keyword_match'] for r in divergence_results])\n",
     "\n",
-    "print(f\"\\n\ud83d\udcca Results:\")\n",
+    "print(f\"\\n📊 Results:\")\n",
     "print(f\"Average divergence score: {avg_divergence:.3f}\")\n",
     "print(f\"Deontological keyword match: {avg_deont_match:.3f}\")\n",
     "print(f\"Consequentialist keyword match: {avg_conseq_match:.3f}\")"
@@ -351,7 +351,7 @@
     "plt.savefig(f\"{RESULTS_PATH}/evaluation_results.png\")\n",
     "plt.show()\n",
     "\n",
-    "print(\"\\n\ud83d\udcc8 Visualizations saved to results/evaluation_results.png\")"
+    "print(\"\\n📈 Visualizations saved to results/evaluation_results.png\")"
    ]
   },
   {
@@ -407,24 +407,24 @@
     "with open(output_path, 'w') as f:\n",
     "    json.dump(evaluation_summary, f, indent=2)\n",
     "\n",
-    "print(f\"\u2705 Evaluation results saved to {output_path}\")\n",
+    "print(f\"✅ Evaluation results saved to {output_path}\")\n",
     "\n",
     "# Display final summary\n",
     "print(\"\\n\" + \"=\"*50)\n",
-    "print(\"\ud83d\udcca EVALUATION SUMMARY\")\n",
+    "print(\"📊 EVALUATION SUMMARY\")\n",
     "print(\"=\"*50)\n",
     "print(f\"Divergence Level: {evaluation_summary['interpretation']['divergence_interpretation']}\")\n",
     "print(f\"Framework Alignment: {evaluation_summary['interpretation']['framework_alignment']}\")\n",
     "print(\"\\nRecommendations:\")\n",
     "\n",
     "if avg_divergence < 0.3:\n",
-    "    print(\"\u26a0\ufe0f  Low divergence suggests models haven't internalized different frameworks\")\n",
+    "    print(\"⚠️  Low divergence suggests models haven't internalized different frameworks\")\n",
     "    print(\"   Consider: More training, stronger constitutions, or more diverse data\")\n",
     "elif avg_divergence > 0.6:\n",
-    "    print(\"\u2705 High divergence indicates successful framework differentiation\")\n",
+    "    print(\"✅ High divergence indicates successful framework differentiation\")\n",
     "    print(\"   Next: Analyze reasoning quality and consistency\")\n",
     "else:\n",
-    "    print(\"\ud83d\udd04 Moderate divergence shows some differentiation\")\n",
+    "    print(\"🔄 Moderate divergence shows some differentiation\")\n",
     "    print(\"   Consider: Extended training or constitution refinement\")"
    ]
   },
@@ -442,7 +442,7 @@
    "outputs": [],
    "source": [
     "if custom_benchmarks and len(custom_benchmarks['benchmarks']) > 1:\n",
-    "    print(\"\\n\ud83d\udccb Evaluating custom benchmarks...\")\n",
+    "    print(\"\\n📋 Evaluating custom benchmarks...\")\n",
     "    \n",
     "    custom_results = evaluate_divergence(\n",
     "        evaluator,\n",
@@ -459,7 +459,7 @@
     "        json.dump(custom_results, f, indent=2)\n",
     "    print(f\"Custom benchmark results saved to {custom_output}\")\n",
     "else:\n",
-    "    print(\"\\n\ud83d\udccb No custom benchmarks to evaluate (add them to custom_benchmarks.json)\")"
+    "    print(\"\\n📋 No custom benchmarks to evaluate (add them to custom_benchmarks.json)\")"
    ]
   }
  ],
